Automate releasing workflow with gitea actions (#2)
- pull request workflow to validate changes
 - VERSION file must be updated if substance files are modified
 - CHANGELOG.md must include a ## heading for the current VERSION
 - CHANGELOG.md bundled with archive
 - release workflow to Gitea
 - release workflow to GitHub

Reviewed-on: https://git.kmaismith.com/kmaismith/note.sh/pulls/2
Co-authored-by: Kyle Smith <kyle@kmaismith.com>
Co-committed-by: Kyle Smith <kyle@kmaismith.com>

Amendments for initial production workflows:

 - Add secrets to release.yaml workflow
 - add export to GIT_REPO
 - Add jq fetching to make infrastructure
 - Gitea: Do not add existing attachments to releases
 - github: do not create existing releases

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -11,11 +11,13 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Run shellcheck
-        run: |
-          make shellcheck
+        run: make shellcheck
+      - name: Run VERSION file checks
+        run: make version_is_updated
+      - name: Run CHANGELOG.md checks
+        run: make changelog_is_updated
       - name: Build note.sh
-        run: |
-          make build
+        run: make build
       - name: Publish note.sh artifact
         uses: actions/upload-artifact@v3
         with:
